Use PSGallery to calculate next version.

--- a/.azure-pipelines/common-templates/download-openapi-docs.yml
+++ b/.azure-pipelines/common-templates/download-openapi-docs.yml
@@ -79,8 +79,7 @@ steps:
       pwsh: true
       targetType: inline
       script: |
-        $nugetFeedName = '$(NUGETFEEDNAME)'
-        . "$(System.DefaultWorkingDirectory)\tools\Versions\BumpModuleVersion.ps1" -Repository $nugetFeedName -BumpV1Module -BumpBetaModule -BumpAuthModule -Debug
+        . "$(System.DefaultWorkingDirectory)\tools\Versions\BumpModuleVersion.ps1" -BumpV1Module -BumpBetaModule -BumpAuthModule -Debug
 
   - task: Bash@3
     displayName: Commit downloaded files
